---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 253
  l: "    fn some_test() {\n"
  m: "    ^^^^^^^^^^^^^^^^^^"
- n: 254
  l: "        assert_eq!(3, 3);\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 255
  l: "    }\n"
  m: "^^^^^  "
- n: 259
  l: "    fn test_with_rstest(#[case] i: u64) {\n"
  m: "    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^"
- n: 260
  l: "        assert_eq!(1337, 1337);\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 261
  l: "    }\n"
  m: "^^^^^  "
